web/app/styles/value.css
.value.human {
  cursor: pointer;
  display: inline-block;
}
.value.human:hover {
  text-decoration: underline;
}

.spinner {
  animation: spinner 0.5s infinite linear;
}
@keyframes spinner {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.value-error {
  font-weight: bold;
  color: darkred;
  cursor: pointer;
}

.value-error + .tooltip > .tooltip-inner {
  background: darkred;
}
.value-error + .tooltip > .tooltip-arrow {
  border-top-color: darkred;
}

